# openstack_aio

./: 1_bootstrap.yml  2_host_vm.yml  README.adoc  ansible.cfg  pyproject.toml  requirements.yml
inventory/: host_vars.yml.example  libvirt.yml
tasks/: meta_data.yml  setup_kvm.yml  user_data.yml.j2
templates/: vnet.xml.j2
