[tool.poetry]
name = "openstack_vm"
version = "0.1.0"
description = "Convenience scripts for loading a mini OpenStack VM on your local machine"
authors = ["Will Siddall <will.siddall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
PyYAML = "^5.4.1"
lxml = "^4.6.2"
ansible = "^4.6.0"
netaddr = "^0.8.0"
jmespath = "^0.10.0"
libvirt-python = "^7.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
